# represent-postcodes

./: COPYING  LICENSE  README.md  settings.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml
postcodes/: admin.py  models.py  urls.py  views.py
postcodes/management/commands/: loadpostcodeconcordance.py  loadpostcodes.py
postcodes/migrations/: 0001_initial.py  0002_auto__chg_field_postcodeconcordance_source.py
postcodes/south_migrations/: 0001_initial.py
