[metadata]
name = represent-postcodes
version = 0.0.1
license = MIT
description = A web API for postal codes associated to electoral districts, packaged as a Django app.
url = https://github.com/opennorth/represent-postcodes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: Django

[options]
packages = find:
install_requires =
    django-appconf
    represent-boundaries

[isort]
profile = black

[flake8]
exclude = postcodes/migrations
extend-ignore =
    # E501 line too long (X > 79 characters)
    E501
