[metadata]
name = represent-postcodes
version = 0.0.1
license = MIT
description = A web API for postal codes associated to electoral districts, packaged as a Django app.
url = https://github.com/opennorth/represent-postcodes
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Framework :: Django

[options]
packages = find:
install_requires =
    django-appconf
    represent-boundaries

[isort]
line_length = 119
profile = black

[flake8]
max-line-length = 119
exclude = postcodes/migrations
